Basic scaffold of landing page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
+    <title>Tipsease - Build Week Project Unit 1 </title>
 </head>
 <body>
-    
+   <div class="container">
+       <nav>
+           <div class="nav-header">
+               <img src="assets/icons/nav-header-icon.png" alt="transfer-money-icon">
+               <h1>Tipsease</h1>
+           </div>
+           <div class="nav-links">
+               <a href="">Browse Workers</a>
+               <a href="">Our Mission</a>
+               <a href="">Login | Sign Up</a>
+           </div>
+       </nav>
+       <section>
+           <div class="jumbo">
+               <img src="assets/images/Group.png" alt="woman with coffee and mobile phone">
+           </div>
+       </section>
+       <section>
+           <div class="intro">
+                <div class="intro-img">
+                    <img src="assets/images/kyryll-ushakov-b2pDjDp7VRM-unsplash.jpg" alt="bartender">
+                </div>
+                <div class="intro-text">
+                    <h2>Support local workers by sending them tips, commision free, straight to their account</h2>
+                    <p>Look out for the Tipsease sticker, ask for your chosen worker's handle, share the love</p>
+                    <button class="sign-me-up">Sign Me Up!</button>
+                </div>
+           </div>
+       </section>
+       <section>
+           <div class="sign-up">
+                <div class="sign-up-header">
+                    <h2>It's as easy as one, two, three...</h2>
+                </div>
+                <div class="sign-up-content">
+                    <div class="sign-up-col bori">
+                        <h3>Tippees</h3>
+                        <div class="step-box">
+                            <img src="assets/icons/icons8-salary-female-100.png" alt="">
+                            <p>Create your account as a Tipsease worker.</p>
+                        </div>
+                        <div class="step-box">
+                            <img src="assets/icons/icons8-communication-100.png" alt="">
+                            <p>Tell tippers a bit about yourself. Don't be modest.</p>
+                        </div>
+                        <div class="step-box">
+                            <img src="assets/icons/icons8-get-revenue-100.png" alt="">
+                            <p>Receive tips straight into your account for all your hard work. Send a thank you note.</p>
+                        </div>
+                        <button class="sign-me-up">Sign Me Up!</button>
+                    </div>
+                    <div class="sign-up-col">
+                        <h3>Tippees</h3>
+                        <div class="step-box">
+                            <img src="assets/icons/icons8-add-user-male-100.png" alt="">
+                            <p>Create your account as a Tipsease tipper.</p>
+                        </div>
+                        <div class="step-box">
+                            <img src="assets/icons/icons8-search-100.png" alt="">
+                            <p>Browse hundreds of workers in your specified area or industry.</p>
+                        </div>
+                        <div class="step-box">
+                            <img src="assets/icons/icons8-money-transfer-100.png" alt="">
+                            <p>Share the love by sending them a tip, commission free, direct to their account.</p>
+                        </div>
+                        <button class="sign-me-up">Sign Me Up!</button>
+                    </div>
+                </div>
+           </div>
+       </section>
+       <section>
+           <div class="browse-businesses">
+               <img src="assets/images/hans-vivek-gfLlvYFD7NE-unsplash.jpg" alt="browse local businesses">
+               <button class="sign-me-up">Browse local businesses that support Tipsease</button>
+           </div>
+       </section>
+       <footer>
+           <img src="assets/icons/icons8-twitter-100.png" alt="twitter icon">
+           <img src="assets/icons/icons8-instagram-old-100.png" alt="instagram icon">
+           <img src="assets/icons/icons8-facebook-f-100.png" alt="facebook icon">
+       </footer>
+   </div>
 </body>
 </html>
