Basic scaffolding for mobile & tablet view on landing page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <button class="sign-me-up">Sign Me Up!</button>
                     </div>
                     <div class="sign-up-col">
-                        <h3>Tippees</h3>
+                        <h3>Tippers</h3>
                         <div class="step-box">
                             <img src="assets/icons/icons8-add-user-male-100.png" alt="">
                             <p>Create your account as a Tipsease tipper.</p>
