Basic rubric for login & signup

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
+    
     <title>Tipsease - Build Week Project Unit 1 </title>
 </head>
 <body>
@@ -17,8 +18,8 @@
            </div>
            <div class="nav-links">
                <a href="">Browse Workers</a>
-               <a href="">Our Mission</a>
-               <a href="">Login | Sign Up</a>
+               <a href="/index.html">Our Mission</a>
+               <a href="/login.html">Login | Sign Up</a>
            </div>
        </nav>
        <section>
