Altered headings in mobile view

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="intro-text">
                     <h2>Support local workers by sending them tips, commision free, straight to their account</h2>
                     <p>Look out for the Tipsease sticker, ask for your chosen worker's handle, share the love</p>
-                    <button class="sign-me-up">Sign Me Up!</button>
+                   <a href="/login.html"> <button class="sign-me-up">Sign Me Up!</button></a>
                 </div>
            </div>
        </section>
