Scaffold Browse Workers section of Homepage

--- a/index.html
+++ b/index.html
@@ -79,6 +79,41 @@
                 <button class="sign-me-up">Sign Me Up!</button>
            </div>
        </section>
+
+       <section>
+           <div class="browse-workers">
+               <div class="browse-workers-header">
+                   <h2>Browse Workers Near You</h2>
+               </div>
+               <div class="browse-workers-content">
+                   <div class="browse-workers-col">
+                       <div class="browse-workers-box">
+                           <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
+                           <h2>Bobby, Mixologist</h2>
+                           <h3>Pygmalion, Dublin City Centre</h3>
+                       </div>
+                       <div class="browse-workers-box">
+                           <img src="assets/images/O38VJ.jpeg" alt="artist">
+                           <h2>Ted, Artist</h2>
+                           <h3>Freelance, Dublin</h3>
+                       </div>
+                   </div>
+                   <div class="browse-workers-col">
+                        <div class="browse-workers-box">
+                            <img src="assets/images/brooke-cagle-9fHMo1-5Io8-unsplash.jpg" alt="barista">
+                            <h2>Roisin, Barista</h2>
+                            <h3>Insomnia, Swords</h3>
+                        </div>
+                        <div class="browse-workers-box">
+                            <img src="assets/images/lfedk.jpeg" alt="chef">
+                            <h2>Jamie, Chef</h2>
+                            <h3>The Dog House, Howth</h3>
+                        </div>
+                   </div>
+               </div>
+           </div>
+       </section>
+
        <section>
            <div class="browse-businesses">
                <img src="assets/images/hans-vivek-gfLlvYFD7NE-unsplash.jpg" alt="browse local businesses">
