Styled browse workers boxes

--- a/index.html
+++ b/index.html
@@ -83,19 +83,21 @@
        <section>
            <div class="browse-workers">
                <div class="browse-workers-header">
-                   <h2>Browse Workers Near You</h2>
+                   <h1>Browse Workers Near You</h1>
                </div>
                <div class="browse-workers-content">
                    <div class="browse-workers-col">
                        <div class="browse-workers-box">
                            <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
                            <h2>Bobby, Mixologist</h2>
-                           <h3>Pygmalion, Dublin City Centre</h3>
+                           <h3>Pygmalion, Dublin City</h3>
+                           <button class="send-tip-btn">Send Tip</button>
                        </div>
                        <div class="browse-workers-box">
                            <img src="assets/images/O38VJ.jpeg" alt="artist">
                            <h2>Ted, Artist</h2>
                            <h3>Freelance, Dublin</h3>
+                           <button class="send-tip-btn">Send Tip</button>
                        </div>
                    </div>
                    <div class="browse-workers-col">
@@ -103,14 +105,17 @@
                             <img src="assets/images/brooke-cagle-9fHMo1-5Io8-unsplash.jpg" alt="barista">
                             <h2>Roisin, Barista</h2>
                             <h3>Insomnia, Swords</h3>
+                            <button class="send-tip-btn">Send Tip</button>
                         </div>
                         <div class="browse-workers-box">
                             <img src="assets/images/lfedk.jpeg" alt="chef">
                             <h2>Jamie, Chef</h2>
-                            <h3>The Dog House, Howth</h3>
+                            <h3>Room 23, Howth</h3>
+                            <button class="send-tip-btn">Send Tip</button>
                         </div>
-                   </div>
-               </div>
+                   </div> 
+                </div>   
+                <button class="browse" href="/index.html">Browse More Workers</button>     
            </div>
        </section>
 
@@ -121,9 +126,9 @@
            </div>
        </section>
        <footer>
-           <img src="assets/icons/icons8-twitter-100.png" alt="twitter icon">
-           <img src="assets/icons/icons8-instagram-old-100.png" alt="instagram icon">
-           <img src="assets/icons/icons8-facebook-f-100.png" alt="facebook icon">
+           <a href="https://twitter.com"> <img src="assets/icons/icons8-twitter-100.png" alt="twitter icon"></a>
+           <a href="https://www.instagram.com"><img src="assets/icons/icons8-instagram-old-100.png" alt="instagram icon"></a> 
+           <a href="https://www.facebook.com/"><img src="assets/icons/icons8-facebook-f-100.png" alt="facebook icon"></a> 
        </footer>
    </div>
 </body>
