Sticky nav, increased font size on nav links dependant on active page

--- a/login.html
+++ b/login.html
@@ -11,17 +11,17 @@
 </head>
 <body>
    <div class="container">
-       <nav>
-           <div class="nav-header">
-               <img src="assets/icons/nav-header-icon.png" alt="transfer-money-icon">
-               <h1>Tipsease</h1>
-           </div>
-           <div class="nav-links">
-               <a href="">Browse Workers</a>
-               <a href="/index.html">Our Mission</a>
-               <a href="/login.html">Login | Sign Up</a>
-           </div>
-       </nav>
+        <nav>
+                <div class="nav-header">
+                    <img src="assets/icons/nav-header-icon.png" alt="transfer-money-icon">
+                    <h1>Tipsease</h1>
+                </div>
+                <div class="nav-links">
+                    <a href="/browseworkers.html">Browse Workers</a>
+                    <a href="/login.html" class="active">Login | Sign Up</a>
+                    <a href= "/index.html"><img src="assets/icons/home.png" alt="home icon"></a>
+                </div>
+         </nav>
        <div class="forms-container">
            <div class="form-col">
                <form action="" class = "bori">
