Changed color scheme for signup icons to distinguish between workers and tippers

--- a/index.html
+++ b/index.html
@@ -46,37 +46,37 @@
                 </div>
                 <div class="sign-up-content">
                     <div class="sign-up-col bori">
-                        <h3>Tippees</h3>
+                        <h3>Workers</h3>
                         <div class="step-box">
-                            <img src="assets/icons/icons8-salary-female-100.png" alt="">
+                            <img src="assets/icons/TippeeAddUser.png" alt="create account as tippee">
                             <p>Create your account as a Tipsease worker.</p>
                         </div>
                         <div class="step-box">
-                            <img src="assets/icons/icons8-communication-100.png" alt="">
+                            <img src="assets/icons/TippeeTellUsers.png" alt="tippee tell users about you">
                             <p>Tell tippers a bit about yourself. Don't be modest.</p>
                         </div>
                         <div class="step-box">
-                            <img src="assets/icons/icons8-get-revenue-100.png" alt="">
+                            <img src="assets/icons/TippeeReceiveTip.png" alt="Receive tip">
                             <p>Receive tips straight into your account for all your hard work. Send a thank you note.</p>
                         </div>
                     </div>
                     <div class="sign-up-col">
                         <h3>Tippers</h3>
                         <div class="step-box">
-                            <img src="assets/icons/icons8-add-user-male-100.png" alt="">
+                            <img src="assets/icons/TipperAddUser.png" alt="Create account as tipper">
                             <p>Create your account as a Tipsease tipper.</p>
                         </div>
                         <div class="step-box">
-                            <img src="assets/icons/icons8-search-100.png" alt="">
-                            <p>Browse hundreds of workers in your specified area or industry.</p>
+                            <img src="assets/icons/TipperSearch.png" alt="Search for workers you can tip">
+                            <p>Browse hundreds of workers in a specified area or industry.</p>
                         </div>
                         <div class="step-box">
-                            <img src="assets/icons/icons8-money-transfer-100.png" alt="">
+                            <img src="assets/icons/TipperSendTip.png" alt="Send Tip">
                             <p>Share the love by sending them a tip, commission free, direct to their account.</p>
                         </div>
                     </div>
                 </div>
-                <button class="sign-me-up">Sign Me Up!</button>
+                <a href="/login.html"> <button class="sign-me-up">Sign Me Up!</button></a>
            </div>
        </section>
 
