Browse workers section on landing page scaffolded

--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
            <div class="browse-workers">
                <div class="browse-workers-header">
                    <h1>Browse Workers Near You</h1>
+                    <div class="searchbar">
+                            <img src="assets/icons/browseWorkers.png" alt="search icon">
+                            <input type="search" name="browse-workers" id="" placeholder="Search by Handle">
+                            <select name="sortBy" id="">
+                                <option value="placholder">Sort By</option>
+                                <option value="name">Name</option>
+                                <option value="area">Area</option>
+                                <option value="industry">Industry</option>
+                            </select>
+                    </div>
                </div>
                <div class="browse-workers-content">
                    <div class="browse-workers-col">
