Nav links aligned to flex-end

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
        </section>
        <section>
            <div class="intro">
+               <div class="intro-text">
+                   <h2>Support local workers by sending them tips, commision free, straight to their account</h2>
+                   <p>Look out for the Tipsease sticker, ask for your chosen worker's handle, share the love</p>
+                   <a href="/login.html"> <button class="sign-me-up">Sign Me Up!</button></a>
+                </div>
                 <div class="intro-img">
                     <img src="assets/images/kyryll-ushakov-b2pDjDp7VRM-unsplash.jpg" alt="bartender">
-                </div>
-                <div class="intro-text">
-                    <h2>Support local workers by sending them tips, commision free, straight to their account</h2>
-                    <p>Look out for the Tipsease sticker, ask for your chosen worker's handle, share the love</p>
-                   <a href="/login.html"> <button class="sign-me-up">Sign Me Up!</button></a>
                 </div>
            </div>
        </section>
@@ -93,7 +93,8 @@
                                 <option value="area">Area</option>
                                 <option value="industry">Industry</option>
                             </select>
-                    </div>
+                            <a href="browseworkers.html"><button class = "go">GO</button></a>
+                        </div>
                </div>
                <div class="browse-workers-content">
                    <div class="browse-workers-col">
@@ -125,7 +126,7 @@
                         </div>
                    </div> 
                 </div>   
-                <button class="browse" href="/index.html">Browse More Workers</button>     
+                <a href="browseworkers.html"><button class="browse">Browse More Workers</button></a>
            </div>
        </section>
 
