Browse workers scaffolded

--- a/browseworkers.html
+++ b/browseworkers.html
@@ -17,11 +17,85 @@
                <h1>Tipsease</h1>
            </div>
            <div class="nav-links">
-               <a href="/browseworkers.html" class = 'active'>Browse Workers</a>
+               <a href="/browseworkers.html" class ='active'>Browse Workers</a>
                <a href="/login.html" >Login | Sign Up</a>
                <a href="/index.html"><img src="assets/icons/home.png" alt="home icon" class = "active"></a>
            </div>
        </nav>
+
+       <div class="browse-workers">
+            <div class="browse-workers-header">
+                 <div class="searchbar">
+                         <img src="assets/icons/browseWorkers.png" alt="search icon">
+                         <input type="search" name="browse-workers" id="" placeholder="Search by Handle">
+                         <select name="sortBy" id="">
+                             <option value="placholder">Sort By</option>
+                             <option value="name">Name</option>
+                             <option value="area">Area</option>
+                             <option value="industry">Industry</option>
+                         </select>
+                         <a href="browseworkers.html"><button class = "go">GO</button></a>
+                     </div>
+            </div>
+            <div class="browse-workers-content">
+               <div class="browse-workers-row">
+                    <div class="browse-workers-box">
+                            <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
+                            <h2>Bobby, Mixologist</h2>
+                            <h3>Pygmalion, Dublin City</h3>
+                            <button class="send-tip-btn">Send Tip</button>
+                    </div>
+                    <div class="browse-workers-box">
+                            <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
+                            <h2>Bobby, Mixologist</h2>
+                            <h3>Pygmalion, Dublin City</h3>
+                            <button class="send-tip-btn">Send Tip</button>
+                    </div>
+                    <div class="browse-workers-box">
+                            <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
+                            <h2>Bobby, Mixologist</h2>
+                            <h3>Pygmalion, Dublin City</h3>
+                            <button class="send-tip-btn">Send Tip</button>
+                    </div>
+                    <div class="browse-workers-box">
+                            <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
+                            <h2>Bobby, Mixologist</h2>
+                            <h3>Pygmalion, Dublin City</h3>
+                            <button class="send-tip-btn">Send Tip</button>
+                    </div>
+               </div>
+               <div class="browse-workers-row">
+                    <div class="browse-workers-box">
+                            <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
+                            <h2>Bobby, Mixologist</h2>
+                            <h3>Pygmalion, Dublin City</h3>
+                            <button class="send-tip-btn">Send Tip</button>
+                        </div>
+                        <div class="browse-workers-box">
+                            <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
+                            <h2>Bobby, Mixologist</h2>
+                            <h3>Pygmalion, Dublin City</h3>
+                            <button class="send-tip-btn">Send Tip</button>
+                        </div>
+                        <div class="browse-workers-box">
+                            <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
+                            <h2>Bobby, Mixologist</h2>
+                            <h3>Pygmalion, Dublin City</h3>
+                            <button class="send-tip-btn">Send Tip</button>
+                        </div>
+                        <div class="browse-workers-box">
+                            <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
+                            <h2>Bobby, Mixologist</h2>
+                            <h3>Pygmalion, Dublin City</h3>
+                            <button class="send-tip-btn">Send Tip</button>
+                        </div>
+               </div>
+            
+             </div>   
+             <a href="browseworkers.html"><button class="browse">Browse More Workers</button></a>
+        </div>
+
+
 
        <footer>
             <a href="https://twitter.com"> <img src="assets/icons/icons8-twitter-100.png" alt="twitter icon"></a>
