--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
        </nav>
        <section>
            <div class="jumbo">
-               <img src="assets/images/Group.png" alt="woman with coffee and mobile phone">
+               <img src="assets/images/jumbo.png" alt="woman with coffee and mobile phone">
            </div>
        </section>
        <section>
            <div class="intro">
                <div class="intro-text">
                    <h2>Support local workers by sending them tips, commision free, straight to their account</h2>
-                   <p>Look out for the Tipsease sticker, ask for your chosen worker's handle, share the love</p>
+                   <p>Our mission at Tipsease is to stamp out unfairness in tipping conventions worldwide and eliminate the need to have cash on your person.</p>
+                   <p class = 'longIntro'>Although some service workers are allowed to keep customer tips and service charges, in addition to their contracted wages, there is also a myriad of companies that opt to pool any tips received between employees. This is very often not regulated and, in some cases, simply doesn't happen.</p>
+                   <p>Enter Tipsease.</p>
+                   <p>Look out for the Tipsease sticker, ask for your chosen worker's handle, share the love.</p>
                    <a href="/login.html"> <button class="sign-me-up">Sign Me Up!</button></a>
                 </div>
                 <div class="intro-img">
@@ -81,8 +84,8 @@
        </section>
 
        <section>
-           <div class="browse-workers">
-               <div class="browse-workers-header">
+           <div class="browse-workers-home">
+               <div class="browse-workers-header-home">
                    <h1>Browse Workers Near You</h1>
                     <div class="searchbar">
                             <img src="assets/icons/browseWorkers.png" alt="search icon">
@@ -96,29 +99,29 @@
                             <a href="browseworkers.html"><button class = "go">GO</button></a>
                         </div>
                </div>
-               <div class="browse-workers-content">
-                   <div class="browse-workers-col">
-                       <div class="browse-workers-box">
+               <div class="browse-workers-content-home">
+                   <div class="browse-workers-col-home">
+                       <div class="browse-workers-box-home">
                            <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
                            <h2>Bobby, Mixologist</h2>
                            <h3>Pygmalion, Dublin City</h3>
                            <button class="send-tip-btn">Send Tip</button>
                        </div>
-                       <div class="browse-workers-box">
+                       <div class="browse-workers-box-home">
                            <img src="assets/images/O38VJ.jpeg" alt="artist">
                            <h2>Ted, Artist</h2>
                            <h3>Freelance, Dublin</h3>
                            <button class="send-tip-btn">Send Tip</button>
                        </div>
                    </div>
-                   <div class="browse-workers-col">
-                        <div class="browse-workers-box">
+                   <div class="browse-workers-col-home">
+                        <div class="browse-workers-box-home">
                             <img src="assets/images/brooke-cagle-9fHMo1-5Io8-unsplash.jpg" alt="barista">
                             <h2>Roisin, Barista</h2>
                             <h3>Insomnia, Swords</h3>
                             <button class="send-tip-btn">Send Tip</button>
                         </div>
-                        <div class="browse-workers-box">
+                        <div class="browse-workers-box-home">
                             <img src="assets/images/lfedk.jpeg" alt="chef">
                             <h2>Jamie, Chef</h2>
                             <h3>Room 23, Howth</h3>
