--- a/index.html
+++ b/index.html
@@ -1,49 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
-    
+
     <title>Tipsease - Build Week Project Unit 1 </title>
 </head>
+
 <body>
-   <div class="container">
-       <nav>
-           <div class="nav-header">
-               <img src="assets/icons/nav-header-icon.png" alt="transfer-money-icon">
-               <h1>Tipsease</h1>
-           </div>
-           <div class="nav-links">
-               <a href="browseworkers.html">Browse Workers</a>
-               <a href="login.html" >Login | Sign Up</a>
-               <a href="index.html"><img src="assets/icons/home.png" alt="home icon" class = "active"></a>
-           </div>
-       </nav>
-       <section>
-           <div class="jumbo">
-               <img src="assets/images/jumbo.png" alt="woman with coffee and mobile phone">
-           </div>
-       </section>
-       <section>
-           <div class="intro">
-               <div class="intro-text">
-                   <h2>Support local workers by sending them tips, commision free, straight to their account</h2>
-                   <p>Our mission at Tipsease is to stamp out unfairness in tipping conventions worldwide and eliminate the need to have cash on your person.</p>
-                   <p class = 'longIntro'>Although some service workers are allowed to keep customer tips and service charges, in addition to their contracted wages, there is also a myriad of companies that opt to pool any tips received between employees. This is very often not regulated and, in some cases, simply doesn't happen.</p>
-                   <p>Enter Tipsease.</p>
-                   <p>Look out for the Tipsease sticker, ask for your chosen worker's handle, share the love.</p>
-                   <a href="/login.html"> <button class="sign-me-up">Sign Me Up!</button></a>
+    <div class="container">
+        <nav>
+            <div class="nav-header">
+                <img src="assets/icons/nav-header-icon.png" alt="transfer-money-icon">
+                <h1>Tipsease</h1>
+            </div>
+            <div class="nav-links">
+                <a href="browseworkers.html">Browse Workers</a>
+                <a href="login.html">Login | Sign Up</a>
+                <a href="index.html"><img src="assets/icons/home.png" alt="home icon" class="active"></a>
+            </div>
+        </nav>
+        <section>
+            <div class="jumbo">
+                <img src="assets/images/jumbo.png" alt="woman with coffee and mobile phone">
+            </div>
+        </section>
+        <section>
+            <div class="intro">
+                <div class="intro-text">
+                    <h2>Support local workers by sending them tips, commision free, straight to their account</h2>
+                    <p>Our mission at Tipsease is to stamp out unfairness in tipping conventions worldwide and eliminate
+                        the need to have cash on your person.</p>
+                    <p class='longIntro'>Although some service workers are allowed to keep customer tips and service
+                        charges, in addition to their contracted wages, there is also a myriad of companies that opt to
+                        pool any tips received between employees. This is very often not regulated and, in some cases,
+                        simply doesn't happen.</p>
+                    <p>Enter Tipsease.</p>
+                    <p>Look out for the Tipsease sticker, ask for your chosen worker's handle, share the love.</p>
+                    <a href="/login.html"> <button class ="btn">Sign Me Up!</button></a>
                 </div>
                 <div class="intro-img">
                     <img src="assets/images/kyryll-ushakov-b2pDjDp7VRM-unsplash.jpg" alt="bartender">
                 </div>
-           </div>
-       </section>
-       <section>
-           <div class="sign-up">
+            </div>
+        </section>
+        <section>
+            <div class="sign-up">
                 <div class="sign-up-header">
                     <h2>It's as easy as one, two, three...</h2>
                 </div>
@@ -60,7 +66,8 @@
                         </div>
                         <div class="step-box">
                             <img src="assets/icons/TippeeReceiveTip.png" alt="Receive tip">
-                            <p>Receive tips straight into your account for all your hard work. Send a thank you note.</p>
+                            <p>Receive tips straight into your account for all your hard work. Send a thank you note.
+                            </p>
                         </div>
                     </div>
                     <div class="sign-up-col">
@@ -80,41 +87,41 @@
                     </div>
                 </div>
                 <a href="/login.html"> <button class="sign-me-up">Sign Me Up!</button></a>
-           </div>
-       </section>
+            </div>
+        </section>
 
-       <section>
-           <div class="browse-workers-home">
-               <div class="browse-workers-header-home">
-                   <h1>Browse Workers Near You</h1>
+        <section>
+            <div class="browse-workers-home">
+                <div class="browse-workers-header-home">
+                    <h1>Browse Workers Near You</h1>
                     <div class="searchbar">
-                            <img src="assets/icons/browseWorkers.png" alt="search icon">
-                            <input type="search" name="browse-workers" id="" placeholder="Search by Handle">
-                            <select name="sortBy" id="">
-                                <option value="placholder">Sort By</option>
-                                <option value="name">Name</option>
-                                <option value="area">Area</option>
-                                <option value="industry">Industry</option>
-                            </select>
-                            <a href="browseworkers.html"><button class = "go">GO</button></a>
+                        <img src="assets/icons/browseWorkers.png" alt="search icon">
+                        <input type="search" name="browse-workers" id="" placeholder="Search by Handle">
+                        <select name="sortBy" id="">
+                            <option value="placholder">Sort By</option>
+                            <option value="name">Name</option>
+                            <option value="area">Area</option>
+                            <option value="industry">Industry</option>
+                        </select>
+                        <a href="browseworkers.html"><button class="go">GO</button></a>
+                    </div>
+                </div>
+                <div class="browse-workers-content-home">
+                    <div class="browse-workers-col-home">
+                        <div class="browse-workers-box-home">
+                            <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
+                            <h2>Bobby, Mixologist</h2>
+                            <h3>Pygmalion, Dublin City</h3>
+                            <button class="send-tip-btn">Send Tip</button>
                         </div>
-               </div>
-               <div class="browse-workers-content-home">
-                   <div class="browse-workers-col-home">
-                       <div class="browse-workers-box-home">
-                           <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
-                           <h2>Bobby, Mixologist</h2>
-                           <h3>Pygmalion, Dublin City</h3>
-                           <button class="send-tip-btn">Send Tip</button>
-                       </div>
-                       <div class="browse-workers-box-home">
-                           <img src="assets/images/O38VJ.jpeg" alt="artist">
-                           <h2>Ted, Artist</h2>
-                           <h3>Freelance, Dublin</h3>
-                           <button class="send-tip-btn">Send Tip</button>
-                       </div>
-                   </div>
-                   <div class="browse-workers-col-home">
+                        <div class="browse-workers-box-home">
+                            <img src="assets/images/O38VJ.jpeg" alt="artist">
+                            <h2>Ted, Artist</h2>
+                            <h3>Freelance, Dublin</h3>
+                            <button class="send-tip-btn">Send Tip</button>
+                        </div>
+                    </div>
+                    <div class="browse-workers-col-home">
                         <div class="browse-workers-box-home">
                             <img src="assets/images/brooke-cagle-9fHMo1-5Io8-unsplash.jpg" alt="barista">
                             <h2>Roisin, Barista</h2>
@@ -127,23 +134,25 @@
                             <h3>Room 23, Howth</h3>
                             <button class="send-tip-btn">Send Tip</button>
                         </div>
-                   </div> 
-                </div>   
+                    </div>
+                </div>
                 <a href="browseworkers.html"><button class="browse">Browse More Workers</button></a>
-           </div>
-       </section>
+            </div>
+        </section>
 
-       <section>
-           <div class="browse-businesses">
-               <img src="assets/images/hans-vivek-gfLlvYFD7NE-unsplash.jpg" alt="browse local businesses">
-               <button class="sign-me-up">Browse local businesses that support Tipsease</button>
-           </div>
-       </section>
-       <footer>
-           <a href="https://twitter.com"> <img src="assets/icons/icons8-twitter-100.png" alt="twitter icon"></a>
-           <a href="https://www.instagram.com"><img src="assets/icons/icons8-instagram-old-100.png" alt="instagram icon"></a> 
-           <a href="https://www.facebook.com/"><img src="assets/icons/icons8-facebook-f-100.png" alt="facebook icon"></a> 
-       </footer>
-   </div>
+        <section>
+            <div class="browse-businesses">
+                <img src="assets/images/hans-vivek-gfLlvYFD7NE-unsplash.jpg" alt="browse local businesses">
+                <button class="sign-me-up">Browse local businesses that support Tipsease</button>
+            </div>
+        </section>
+        <footer>
+            <a href="https://twitter.com"> <img src="assets/icons/icons8-twitter-100.png" alt="twitter icon"></a>
+            <a href="https://www.instagram.com"><img src="assets/icons/icons8-instagram-old-100.png"
+                    alt="instagram icon"></a>
+            <a href="https://www.facebook.com/"><img src="assets/icons/icons8-facebook-f-100.png"
+                    alt="facebook icon"></a>
+        </footer>
+    </div>
 </body>
 </html>
