Flex parametric mixin

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <h1>Tipsease</h1>
             </div>
             <div class="nav-links">
-                <a href="browseworkers.html">Browse Workers</a>
-                <a href="login.html">Login | Sign Up</a>
-                <a href="index.html"><img src="assets/icons/home.png" alt="home icon" class="active"></a>
+                <a href="./browseworkers.html">Browse Workers</a>
+                <a href="./login.html">Login | Sign Up</a>
+                <a href="./index.html"><img src="assets/icons/home.png" alt="home icon" class="active"></a>
             </div>
         </nav>
         <section>
@@ -41,7 +41,7 @@
                         simply doesn't happen.</p>
                     <p>Enter Tipsease.</p>
                     <p>Look out for the Tipsease sticker, ask for your chosen worker's handle, share the love.</p>
-                    <a href="/login.html"> <button class ="btn">Sign Me Up!</button></a>
+                    <a href="/login.html"> <button>Sign Me Up!</button></a>
                 </div>
                 <div class="intro-img">
                     <img src="assets/images/kyryll-ushakov-b2pDjDp7VRM-unsplash.jpg" alt="bartender">
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="/login.html"> <button class="sign-me-up">Sign Me Up!</button></a>
+                <a href="/login.html"> <button>Sign Me Up!</button></a>
             </div>
         </section>
 
@@ -103,7 +103,7 @@
                             <option value="area">Area</option>
                             <option value="industry">Industry</option>
                         </select>
-                        <a href="browseworkers.html"><button class="go">GO</button></a>
+                        <a href="browseworkers.html"><button>GO</button></a>
                     </div>
                 </div>
                 <div class="browse-workers-content-home">
@@ -112,13 +112,13 @@
                             <img src="assets/images/bobby-rodriguezz-i7Vy81pnZCI-unsplash.jpg" alt="mixologist">
                             <h2>Bobby, Mixologist</h2>
                             <h3>Pygmalion, Dublin City</h3>
-                            <button class="send-tip-btn">Send Tip</button>
+                            <button>Send Tip</button>
                         </div>
                         <div class="browse-workers-box-home">
                             <img src="assets/images/O38VJ.jpeg" alt="artist">
                             <h2>Ted, Artist</h2>
                             <h3>Freelance, Dublin</h3>
-                            <button class="send-tip-btn">Send Tip</button>
+                            <button>Send Tip</button>
                         </div>
                     </div>
                     <div class="browse-workers-col-home">
@@ -126,13 +126,13 @@
                             <img src="assets/images/brooke-cagle-9fHMo1-5Io8-unsplash.jpg" alt="barista">
                             <h2>Roisin, Barista</h2>
                             <h3>Insomnia, Swords</h3>
-                            <button class="send-tip-btn">Send Tip</button>
+                            <button>Send Tip</button>
                         </div>
                         <div class="browse-workers-box-home">
                             <img src="assets/images/lfedk.jpeg" alt="chef">
                             <h2>Jamie, Chef</h2>
                             <h3>Room 23, Howth</h3>
-                            <button class="send-tip-btn">Send Tip</button>
+                            <button>Send Tip</button>
                         </div>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
         <section>
             <div class="browse-businesses">
                 <img src="assets/images/hans-vivek-gfLlvYFD7NE-unsplash.jpg" alt="browse local businesses">
-                <button class="sign-me-up">Browse local businesses that support Tipsease</button>
+                <button>Browse local businesses that support Tipsease</button>
             </div>
         </section>
         <footer>
