Links pointing to relevant pages in navbar

--- a/browseworkers.html
+++ b/browseworkers.html
@@ -19,9 +19,9 @@
                 <h1>Tipsease</h1>
             </div>
             <div class="nav-links">
-                <a href="/browseworkers.html" class='active'>Browse Workers</a>
-                <a href="/login.html">Login | Sign Up</a>
-                <a href="/index.html"><img src="assets/icons/home.png" alt="home icon" class="active"></a>
+                <a href="./browseworkers.html" class='active'>Browse Workers</a>
+                <a href="./login.html">Login | Sign Up</a>
+                <a href="./index.html"><img src="assets/icons/home.png" alt="home icon" class="active"></a>
             </div>
         </nav>
 
