--- a/login.html
+++ b/login.html
@@ -17,9 +17,9 @@
                     <h1>Tipsease</h1>
                 </div>
                 <div class="nav-links">
-                    <a href="/browseworkers.html">Browse Workers</a>
-                    <a href="/login.html" class="active">Login | Sign Up</a>
-                    <a href= "/index.html"><img src="assets/icons/home.png" alt="home icon"></a>
+                    <a href="./browseworkers.html">Browse Workers</a>
+                    <a href="./login.html" class="active">Login | Sign Up</a>
+                    <a href= "./index.html"><img src="assets/icons/home.png" alt="home icon"></a>
                 </div>
          </nav>
        <div class="forms-container">
